codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__local_daemon_source_mismatch.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&cell.transcript_lines(100)).join(\"\\n\")"
---
⚠ A background Zuno service is running v0.156.0, different from your Zuno CLI v0.0.0.
  Use /daemon to manage the local background server.
  Updating may interrupt active or queued work.
