codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_info_preserves_styled_tooltip_links.snap
---
source: tui/src/history_cell/tests.rs
expression: "rendered.join(\"\\n\")"
---
  Tip: Use /copy or ctrl+y;
  visit the Codex community
    link 12..27: Codex community -> https://example.com
  forum (https://example.com).
    link 2..7: forum -> https://example.com
    link 9..28: https://example.com -> https://example.com
